Changed navbar styles, added Home to navigation, repaired nav on small devices.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,5 @@
 @import url("https://use.typekit.net/ugl3qbi.css");
+
+.about {
+    background: linear-gradient(266deg, #bb004f 0%, #1b1464 100%);
+}
