--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -2,7 +2,6 @@
     position: relative;
     z-index: 0;
     padding: 250px 0 200px 0;
-    background: red;
     background-image: url('./../../../assets/about.png');
     background-size: cover;
 }
