--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 nav {
     transition: 0.7s;
-    border-bottom: 1px solid rgba(255, 255, 255, .05);
+    border-bottom: 1px solid rgba(187, 0, 79, .1);
     font-family: muli, sans-serif;
     font-size: 1em;
     font-weight: 300;
@@ -47,23 +47,26 @@ nav {
             a {
                 text-decoration: none;
                 padding-top: 10px;
-                color: #fafafa;
+                color: #bb004f;
             }
         }
         .active, .nav-item a:hover {
-            border-bottom: 1px solid rgba(255, 255, 255, 0.75);
+            border-bottom: 1px solid rgba(187, 0, 79, 0.75);
             font-weight: 700;
         }
         .nav-item:hover {
             cursor: pointer;
             font-weight: 700;
             a {
-                border-bottom: 1px solid rgba(255, 255, 255, 0.75);
+                border-bottom: 1px solid rgba(187, 0, 79, 0.75);
                 transition: 0s;
                 transition-delay: 0s;
             }
         }
     }
+}
+.scrolled {
+    box-shadow: 1px 0px 10px -4px #757575;
 }
 
 @media only screen and (min-width: 992px) {
@@ -86,11 +89,11 @@ nav {
                 line-height: 30px;
                 a {
                     margin-top: 1px;
-                    color: #5c0032;
+                    color: #bb004f;
                     font-weight: 500;
                 }
                 .active, .nav-item a:hover {
-                    border-bottom: 4px solid #5c0032;
+                    border-bottom: 4px solid #bb004f;
                     font-weight: 700;
                 }
             }
@@ -102,13 +105,14 @@ nav {
     nav {
         background: #fafafa;
         border-bottom: none;
+        box-shadow: 1px 0px 10px -4px #757575;
         .hamburger {
             display: inline;
             position: absolute;
             top: 8px;
             right: 15px;
             .line {
-                background: #5c0032;
+                background: #bb004f;
             }
         }
         ul {
@@ -118,28 +122,27 @@ nav {
             text-align: right;
             top: 30px;
             width: calc(100vw + 15px);
+            box-shadow: 0px 5px 10px -8px #757575;
             .nav-item {
                 background: #fafafa;
                 margin-top: -1px;
                 font-size: 0.9em;
                 a {
-                    color: #5c0032;
+                    color: #bb004f;
                     padding-right: 30px;
                     margin-top: 20px;
                     padding-top: 20px;
                     padding-bottom: 20px;
-                    transition: 0.5s;
-                    transition-delay: 0.5s;
                 }
             }
         }
         .turned {
-            margin-top: -380px;
-            transition: 1.2s;
+            margin-top: -100vh;
+            transition: 2s;
             .nav-item {
                 a {
-                    color: #fafafa;
-                    transition: 0.5s;
+                    color: #bb004f;
+                    transition: 1s;
                 }
             }
         }
