--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -107,10 +107,10 @@
     background: #fafafa;
     z-index: 9;
     position: fixed;
-    top: 35%;
     border-radius: 0 15px 15px 0;
     font-size: 0.8em;
     cursor: pointer;
+    box-shadow: 0px 0px 10px -3px #757575;
     .toggle {
         transform: rotate(-90deg);
         position: relative;
@@ -148,6 +148,7 @@
     }
     .button {
         margin-left: 360px;
+        margin-top: -35px;
     }
     .active {
         transform: translateX(-360px);
@@ -179,6 +180,7 @@
     }
     .button {
         margin-left: 300px;
+        margin-top: -25px;
     }
     .active {
         transform: translateX(-300px);
